2005-03-29  Nick Clifton  <nickc@redhat.com>

	* po/de.po: Updated German translation.

2005-03-17  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2005-03-15  Nick Clifton  <nickc@redhat.com>

	* basic_blocks.c (print_exec_counts): Step through sorted array of
	basic blocks.

2005-03-15  Alan Modra  <amodra@bigpond.net.au>

	* po/es.po: Commit new Spanish translation.

	* po/fr.po: Commit new French translation.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* gmon_io.c (gmon_write_raw_arc): Return 1 for invalid size.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* po/tr.po: Commit new Turkish translation.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/gprof.pot: Regenerate.

2005-02-22  Alan Modra  <amodra@bigpond.net.au>

	* basic_blocks.c: Warning fixes.
	* gmon_io.c: Likewise.
	* hist.c: Likewise.
	* hist.h: Likewise.

2005-01-31  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4.

2005-01-31  Nick Clifton  <nickc@redhat.com>

	* po/vi/po: New file: Vietnamese translation.
	* configure.in: (ALL_LINGUAS): Add vi.
	* configure: Regenerate.

2005-01-27  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4 change.

2005-01-21  Ben Elliston  <bje@au.ibm.com>

	* gmon.h, alpha.c, vax.c: Remove #if 0'd chunks.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* po/gprof.pot: Regenerate.

2004-07-13  Ben Elliston  <bje@au.ibm.com>

	* gprof.c (main): For line-by-line profiling, there is no need to
	specially exclude the default function set from the flat profile.

2004-06-28  Maciej W. Rozycki  <macro@linux-mips.org>

	* Makefile.in: Regenerate to clean up breakage.

2004-06-15  Ben Elliston  <bje@au.ibm.com>
